fixed aligning issue

--- a/index.css
+++ b/index.css
@@ -709,6 +709,7 @@ footer {
 
   .service_name {
     font-size: 16px;
+    margin: 8px auto;
   }
 
   .desc {
